--- a/index.html
+++ b/index.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Portal Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <!--Header Section-->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Job Portal Website</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+</head>
 
-    <header>
-      <div id="navbar" class="obj-width">
-        <a href="index.html"
-          ><img src="images/logo.png" alt="" srcset="" class="logo"
-        /></a>
+<body>
+  <!--Header Section-->
 
-        <ul id="menu">
-          <li><a href="">Home</a></li>
-          <li><a href="">Browse Jobs</a></li>
-          <li><a href="">Contact</a></li>
-          <button id="w-btn">Join</button>
-        </ul>
-        <i id="bar" class='bx bx-menu'></i>
+  <header>
+    <div id="navbar" class="obj-width">
+      <a href="index.html"><img src="images/logo.png" alt="" srcset="" class="logo" /></a>
+
+      <ul id="menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">Browse Jobs</a></li>
+        <li><a href="">Contact</a></li>
+        <button id="w-btn">Join</button>
+      </ul>
+      <i id="bar" class="bx bx-menu"></i>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+
+  <section class="hero">
+    <div class="hero-box obj-width">
+      <div class="h-left">
+        <h1>Find the perfect freelance services for your business</h1>
+        <p>
+          Work with talented people at the most affordable price to get the
+          most out of your time and cost
+        </p>
+        <div class="search">
+          <input type="text" placeholder="Search your job here.." />
+          <a href="#" id="g-btn">Search</a>
+        </div>
       </div>
-    </header>
 
-    <script src="toggle.js"></script>
-  </body>
+      <div class="h-right">
+        <img src="images/hero1.PNG" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!-- Features Section -->
+
+  <section class="features sec-space">
+    <h2>Need something done?
+    </h2>
+    <p>Most viewed and all-time top-selling services</p>
+    <div class="fe-box">
+      <div>
+        <img src="images/fe 1.png" alt="">
+        <h3>Post a job</h3>
+        <p>It's free and easy to post a job.simply fill in a title, description</p>
+      </div>
+
+      <div>
+        <img src="images/fe 2.png" alt="">
+        <h3>Choose freelancers</h3>
+        <p>It's free and easy to post a job.simply fill in a title, description</p>
+      </div>
+
+      <div>
+        <img src="images/fe 3.png" alt="">
+        <h3>Pay safely</h3>
+        <p>It's free and easy to post a job.simply fill in a title, description</p>
+      </div>
+
+      <div>
+        <img src="images/fe 4.png" alt="">
+        <h3>We're here to help</h3>
+        <p>It's free and easy to post a job.simply fill in a title, description</p>
+      </div>
+
+    </div>
+  </section>
+
+
+
+
+  <script src="toggle.js"></script>
+</body>
+
 </html>
