--- a/index.html
+++ b/index.html
@@ -1,91 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Job Portal Website</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Job Portal Website</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-</head>
+  <body>
+    <!--Header Section-->
 
-<body>
-  <!--Header Section-->
+    <header>
+      <div id="navbar" class="obj-width">
+        <a href="index.html"
+          ><img src="images/logo.png" alt="" srcset="" class="logo"
+        /></a>
 
-  <header>
-    <div id="navbar" class="obj-width">
-      <a href="index.html"><img src="images/logo.png" alt="" srcset="" class="logo" /></a>
+        <ul id="menu">
+          <li><a href="">Home</a></li>
+          <li><a href="">Browse Jobs</a></li>
+          <li><a href="">Contact</a></li>
+          <button id="w-btn">Join</button>
+        </ul>
+        <i id="bar" class="bx bx-menu"></i>
+      </div>
+    </header>
 
-      <ul id="menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Browse Jobs</a></li>
-        <li><a href="">Contact</a></li>
-        <button id="w-btn">Join</button>
-      </ul>
-      <i id="bar" class="bx bx-menu"></i>
-    </div>
-  </header>
+    <!-- Hero Section -->
 
-  <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-box obj-width">
+        <div class="h-left">
+          <h1>Find the perfect freelance services for your business</h1>
+          <p>
+            Work with talented people at the most affordable price to get the
+            most out of your time and cost
+          </p>
+          <div class="search">
+            <input type="text" placeholder="Search your job here.." />
+            <a href="#" id="g-btn">Search</a>
+          </div>
+        </div>
 
-  <section class="hero">
-    <div class="hero-box obj-width">
-      <div class="h-left">
-        <h1>Find the perfect freelance services for your business</h1>
-        <p>
-          Work with talented people at the most affordable price to get the
-          most out of your time and cost
-        </p>
-        <div class="search">
-          <input type="text" placeholder="Search your job here.." />
-          <a href="#" id="g-btn">Search</a>
+        <div class="h-right">
+          <img src="images/hero1.PNG" alt="" />
         </div>
       </div>
+    </section>
 
-      <div class="h-right">
-        <img src="images/hero1.PNG" alt="">
+    <!-- Features Section -->
+
+    <section class="features sec-space">
+      <h2>Need something done?</h2>
+      <p>Most viewed and all-time top-selling services</p>
+      <div class="fe-box">
+        <div>
+          <img src="images/fe 1.png" alt="" />
+          <h3>Post a job</h3>
+          <p>
+            It's free and easy to post a job.simply fill in a title, description
+          </p>
+        </div>
+
+        <div>
+          <img src="images/fe 2.png" alt="" />
+          <h3>Choose freelancers</h3>
+          <p>
+            It's free and easy to post a job.simply fill in a title, description
+          </p>
+        </div>
+
+        <div>
+          <img src="images/fe 3.png" alt="" />
+          <h3>Pay safely</h3>
+          <p>
+            It's free and easy to post a job.simply fill in a title, description
+          </p>
+        </div>
+
+        <div>
+          <img src="images/fe 4.png" alt="" />
+          <h3>We're here to help</h3>
+          <p>
+            It's free and easy to post a job.simply fill in a title, description
+          </p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Features Section -->
+    <!-- Job Listing Section -->
 
-  <section class="features sec-space">
-    <h2>Need something done?
-    </h2>
-    <p>Most viewed and all-time top-selling services</p>
-    <div class="fe-box">
-      <div>
-        <img src="images/fe 1.png" alt="">
-        <h3>Post a job</h3>
-        <p>It's free and easy to post a job.simply fill in a title, description</p>
+    <section class="jobs sec-space obj-width">
+      <h2>Jobs in demand</h2>
+      <p>Most viewed and all-time top-selling services</p>
+
+      <ul class="job-id">
+        <li data-target="all" class="active">Recent Jobs</li>
+        <li data-target="freelancer">Freelancer</li>
+        <li data-target="fullTime  ">Full Time</li>
+        <li data-target="partTime">Part Time</li>
+      </ul>
+
+      <div class="jobs-container">
+        <li data-item="fullTime" class="jList">
+          <img src="images/google.png" alt="" />
+          <h3>Web Developer</h3>
+          <p>$900-1200</p>
+          <span id="key">Full Time</span>
+        </li>
+
+        <li data-item="freelancer" class="jList">
+          <img src="images/uber.png" alt="" />
+          <h3>Freelancer</h3>
+          <p>$900-1200</p>
+          <span id="key">Freelancer</span>
+        </li>
+
+        <li data-item="partTime" class="jList">
+          <img src="images/linkedin.png" alt="" />
+          <h3>Business Associate</h3>
+          <p>$900-1200</p>
+          <span id="key">Part Time</span>
+        </li>
+
+        <li data-item="fullTime" class="jList">
+          <img src="images/facebook.png" alt="" />
+          <h3>Digital Marketing</h3>
+          <p>$900-1200</p>
+          <span id="key">Full Time</span>
+        </li>
+
+        <li data-item="partTime" class="jList">
+          <img src="images/yahoo.png" alt="" />
+          <h3>User Experience</h3>
+          <p>$900-1200</p>
+          <span id="key">Part Time</span>
+        </li>
       </div>
-
-      <div>
-        <img src="images/fe 2.png" alt="">
-        <h3>Choose freelancers</h3>
-        <p>It's free and easy to post a job.simply fill in a title, description</p>
-      </div>
-
-      <div>
-        <img src="images/fe 3.png" alt="">
-        <h3>Pay safely</h3>
-        <p>It's free and easy to post a job.simply fill in a title, description</p>
-      </div>
-
-      <div>
-        <img src="images/fe 4.png" alt="">
-        <h3>We're here to help</h3>
-        <p>It's free and easy to post a job.simply fill in a title, description</p>
-      </div>
-
-    </div>
-  </section>
-
-
-
-
-  <script src="toggle.js"></script>
-</body>
-
+    </section>
+    <script src="script.js"></script>
+    <script src="toggle.js"></script>
+  </body>
 </html>
