--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <a href="index.html"><img src="images/logo.png" alt="" srcset="" class="logo" /></a>
 
       <ul id="menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Browse Jobs</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="/jobs/jobs.html">Browse Jobs</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <button id="w-btn">Join</button>
       </ul>
       <i id="bar" class="bx bx-menu"></i>
@@ -139,7 +139,6 @@
     </div>
   </section>
 
-
   <!-- Brand Section -->
 
   <section class="trust sec-space obj-width">
@@ -147,14 +146,13 @@
     <p>Most viewed and all-time top-selling services</p>
 
     <div class="t-box">
-      <img src="images/t1.png" alt="">
-      <img src="images/t2.png" alt="">
-      <img src="images/t3.png" alt="">
-      <img src="images/t4.png" alt="">
-      <img src="images/t5.png" alt="">
-      <img src="images/t6.png" alt="">
+      <img src="images/t1.png" alt="" />
+      <img src="images/t2.png" alt="" />
+      <img src="images/t3.png" alt="" />
+      <img src="images/t4.png" alt="" />
+      <img src="images/t5.png" alt="" />
+      <img src="images/t6.png" alt="" />
     </div>
-
   </section>
 
   <!-- Team Section -->
@@ -165,7 +163,7 @@
 
     <div class="team-container">
       <div class="f1-box">
-        <img src="images/fl-1.png" alt="">
+        <img src="images/fl-1.png" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
           <span id="key">HTML</span>
@@ -176,7 +174,7 @@
       </div>
 
       <div class="f1-box">
-        <img src="images/fl-2.png" alt="">
+        <img src="images/fl-2.png" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
           <span id="key">HTML</span>
@@ -187,7 +185,7 @@
       </div>
 
       <div class="f1-box">
-        <img src="images/fl-3.png" alt="">
+        <img src="images/fl-3.png" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
           <span id="key">HTML</span>
@@ -198,7 +196,7 @@
       </div>
 
       <div class="f1-box">
-        <img src="images/fl-4.png" alt="">
+        <img src="images/fl-4.png" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
           <span id="key">HTML</span>
@@ -208,12 +206,70 @@
         <a href="#" id="g-btn">View Profile</a>
       </div>
     </div>
-
   </section>
 
   <!-- Footer Section -->
 
+  <footer class="footer">
+    <div class="obj-width">
+      <div class="top">
+        <div>
+          <img src="images/logo.png" alt="" class="logo" />
+          <p>Search your desired jobs</p>
+        </div>
+        <div>
+          <a href="#"><i class="bx bxl-facebook-square"></i></a>
+        </div>
 
+        <div>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+        </div>
+
+        <div>
+          <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+        </div>
+
+        <div>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+
+      </div>
+      <div class="bottom">
+        <div>
+          <h3>Project</h3>
+          <a href="#">Changelog</a>
+          <a href="#">Status</a>
+          <a href="#">License</a>
+          <a href="#">All Versions</a>
+        </div>
+
+        <div>
+          <h3>Community</h3>
+          <a href="#">Github</a>
+          <a href="#">Issues</a>
+          <a href="#">Project</a>
+          <a href="#">Twitter</a>
+        </div>
+
+        <div>
+          <h3>Help</h3>
+          <a href="#">Support</a>
+          <a href="#">Troubleshooting</a>
+          <a href="#">Contact Us</a>
+
+        </div>
+
+        <div>
+          <h3>Others</h3>
+          <a href="#">Terms of service</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">License</a>
+
+        </div>
+
+      </div>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
   <script src="toggle.js"></script>
