added footer section

--- a/jobs/jobs.html
+++ b/jobs/jobs.html
@@ -16,7 +16,12 @@
         <div id="navbar" class="obj-width">
             <a href="../index.html"><img src="../images/logo.png" alt="" srcset="" class="logo" /></a>
 
-           
+            <ul id="menu">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">Browse Jobs</a></li>
+                <li><a href="../contact.html">Contact</a></li>
+                <button id="w-btn">Join</button>
+            </ul>
             <i id="bar" class="bx bx-menu"></i>
         </div>
     </header>
