--- a/jobs/jobs.html
+++ b/jobs/jobs.html
@@ -28,7 +28,59 @@
 
     <!-- job listing section -->
 
+    <section class="jobs sec-space obj-width extra-space">
+        <h2>Jobs in demand</h2>
+        <p>Most viewed and all-time top-selling services</p>
 
+        <form>
+            <i class='bx bx-search'></i>
+            <input type="text" placeholder="Search jobs" id="searchBar">
+        </form>
+
+        <ul class="job-id">
+            <li data-target="all" class="active">Recent Jobs</li>
+            <li data-target="freelancer">Freelancer</li>
+            <li data-target="fullTime  ">Full Time</li>
+            <li data-target="partTime">Part Time</li>
+        </ul>
+
+        <div class="jobs-container">
+            <li data-item="fullTime" class="jList">
+                <img src="../images/google.png" alt="" />
+                <h3>Web Developer</h3>
+                <p>$900-1200</p>
+                <span id="key">Full Time</span>
+            </li>
+
+            <li data-item="freelancer" class="jList">
+                <img src="../images/uber.png" alt="" />
+                <h3>Freelancer</h3>
+                <p>$900-1200</p>
+                <span id="key">Freelancer</span>
+            </li>
+
+            <li data-item="partTime" class="jList">
+                <img src="../images/linkedin.png" alt="" />
+                <h3>Business Associate</h3>
+                <p>$900-1200</p>
+                <span id="key">Part Time</span>
+            </li>
+
+            <li data-item="fullTime" class="jList">
+                <img src="../images/facebook.png" alt="" />
+                <h3>Digital Marketing</h3>
+                <p>$900-1200</p>
+                <span id="key">Full Time</span>
+            </li>
+
+            <li data-item="partTime" class="jList">
+                <img src="../images/yahoo.png" alt="" />
+                <h3>User Experience</h3>
+                <p>$900-1200</p>
+                <span id="key">Part Time</span>
+            </li>
+        </div>
+    </section>
 
 
     <!-- footer -->
