--- a/jobs/jobs.html
+++ b/jobs/jobs.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Portal Website</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+
 </head>
 
 <body>
@@ -33,7 +35,7 @@
         <p>Most viewed and all-time top-selling services</p>
 
         <form>
-            <i class='bx bx-search'></i>
+            <i class='bx bx-search-alt-2'></i>
             <input type="text" placeholder="Search jobs" id="searchBar">
         </form>
 
