--- a/jobs/job-details.html
+++ b/jobs/job-details.html
@@ -18,7 +18,7 @@
 
             <ul id="menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Browse Jobs</a></li>
+                <li><a href="../jobs/jobs.html">Browse Jobs</a></li>
                 <li><a href="../contact.html">Contact</a></li>
                 <button id="w-btn">Join</button>
             </ul>
@@ -114,7 +114,7 @@
                 <a href="#" id="g-btn">Apply Now</a>
             </div>
     
-            <div class="features sec-space">
+            <div class="features ">
                 <div class="fe-box">
                     <div>
                         <img src="../images/vacancy.png" alt="" />
