--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,27 @@
       </div>
     </header>
 
+    <!-- Contact -->
+
+    <section class="contact obj-width sec-space extra-space">
+        <div class="contact-img">
+            <h2>Get in touch</h2>
+            <p>Most viewed and all-time top-selling services</p>
+            <img src="images/contact.svg" alt="">
+        </div>
+        <form id="contact-form" method="POST" action="">
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" autocomplete="off" required/>
+
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" autocomplete="off" required/>
+
+            <label for="message">Message</label>
+                <textarea name="message" id="message" rows="5" required></textarea>
+        </form>
+
+    </section>
+
     <!-- Footer Section -->
 
     <footer class="footer">
