--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,19 @@
             <label for="name">Name:</label>
             <input type="text" name="name" id="name" autocomplete="off" required/>
 
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" name="email" id="email" autocomplete="off" required/>
 
-            <label for="message">Message</label>
+            <label for="message">Message:</label>
                 <textarea name="message" id="message" rows="5" required></textarea>
+
+                <input type="submit" id="g-btn" value="submit">
         </form>
 
+    </section>
+
+    <section class="contact obj-width sec-space">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387196.0883478202!2d-74.30985610633378!3d40.696670684352995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1740050254248!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <!-- Footer Section -->
@@ -109,7 +115,7 @@
         </div>
       </div>
     </footer>
-
+ <script src="./fromSubmission.js"></script>
     <script src="script.js"></script>
     <script src="toggle.js"></script>
   </body>
