--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- Features Section -->
 
-  <section class="features sec-space">
+  <section class="features sec-space obj-width">
     <h2>Need something done?</h2>
     <p>Most viewed and all-time top-selling services</p>
     <div class="fe-box">
