--- a/index.html
+++ b/index.html
@@ -163,30 +163,30 @@
 
     <div class="team-container">
       <div class="f1-box">
+        <img src="images/flll-1.png" alt="" />
+        <h3>Qaisar Iqbal</h3>
+        <div class="skill">
+          <span id="key">HTML</span>
+          <span id="key">CSS</span>
+          <span id="key">JS</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+
+      <div class="f1-box">
+        <img src="images/fllll-2.png" alt="" />
+        <h3>Hikmat Khan</h3>
+        <div class="skill">
+          <span id="key">HTML</span>
+          <span id="key">CSS</span>
+          <span id="key">JS</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+
+      <div class="f1-box">
         <img src="images/fll-1.png" alt="" />
-        <h3>Robert Fort</h3>
-        <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
-        </div>
-        <a href="#" id="g-btn">View Profile</a>
-      </div>
-
-      <div class="f1-box">
-        <img src="images/fl-2.png" alt="" />
-        <h3>Robert Fort</h3>
-        <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
-        </div>
-        <a href="#" id="g-btn">View Profile</a>
-      </div>
-
-      <div class="f1-box">
-        <img src="images/fl-3.png" alt="" />
-        <h3>Robert Fort</h3>
+        <h3>Wasim Haider</h3>
         <div class="skill">
           <span id="key">HTML</span>
           <span id="key">CSS</span>
