uploaded new data

--- a/index.html
+++ b/index.html
@@ -163,45 +163,45 @@
 
     <div class="team-container">
       <div class="f1-box">
-        <img src="images/flll-1.png" alt="" />
+        <img src="images/qaisar.png" alt="" />
         <h3>Qaisar Iqbal</h3>
         <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
+          <span id="key">JavaScript</span>
+          <span id="key">Java</span>
+          <span id="key">python</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
 
       <div class="f1-box">
-        <img src="images/fllll-2.png" alt="" />
+        <img src="images/hikmat.png" alt="" />
         <h3>Hikmat Khan</h3>
         <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
+          <span id="key">python</span>
+          <span id="key">Java</span>
+          <span id="key">JavaScript</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
 
       <div class="f1-box">
-        <img src="images/fll-1.png" alt="" />
+        <img src="images/waseem.png" alt="" />
         <h3>Wasim Haider</h3>
         <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
+          <span id="key">JavaScript</span>
+          <span id="key">python</span>
+          <span id="key">Java</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
 
       <div class="f1-box">
-        <img src="images/fl-4.png" alt="" />
+        <img src="images/abdurazaq..png" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
-          <span id="key">HTML</span>
-          <span id="key">CSS</span>
-          <span id="key">JS</span>
+          <span id="key">JavaScript</span>
+          <span id="key">Java</span>
+          <span id="key">python</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
