--- a/index.html
+++ b/index.html
@@ -116,14 +116,163 @@
         <span id="key">Freelancer</span>
       </li>
 
+      <li data-item="partTime" class="jList">
+        <img src="images/linkedin.png" alt="" />
+        <h3>Business Associate</h3>
+        <p>$900-1200</p>
+        <span id="key">Part Time</span>
+      </li>
 
+      <li data-item="fullTime" class="jList">
+        <img src="images/facebook.png" alt="" />
+        <h3>Digital Marketing</h3>
+        <p>$900-1200</p>
+        <span id="key">Full Time</span>
+      </li>
 
+      <li data-item="partTime" class="jList">
+        <img src="images/yahoo.png" alt="" />
+        <h3>User Experience</h3>
+        <p>$900-1200</p>
+        <span id="key">Part Time</span>
+      </li>
     </div>
-    </div>
-    </footer>
+  </section>
 
-    <script src="script.js"></script>
-    <script src="toggle.js"></script>
+  <!-- Brand Section -->
+
+  <section class="trust sec-space obj-width">
+    <h2>Trusted by the world's best</h2>
+    <p>Most viewed and all-time top-selling services</p>
+
+    <div class="t-box">
+      <img src="images/t1.png" alt="" />
+      <img src="images/t2.png" alt="" />
+      <img src="images/t3.png" alt="" />
+      <img src="images/t4.png" alt="" />
+      <img src="images/t5.png" alt="" />
+      <img src="images/t6.png" alt="" />
+    </div>
+  </section>
+
+  <!-- Team Section -->
+
+  <section class="team sec-space obj-width">
+    <h2>Highest Rated Freelancers</h2>
+    <p>Most viewed and all-time top-selling services</p>
+
+    <div class="team-container">
+      <div class="f1-box">
+        <img src="images/qaisar.png" alt="" />
+        <h3>Qaisar Iqbal</h3>
+        <div class="skill">
+          <span id="key">JavaScript</span>
+          <span id="key">Java</span>
+          <span id="key">python</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+
+      <div class="f1-box">
+        <img src="images/hikmat.png" alt="" />
+        <h3>Hikmat Khan</h3>
+        <div class="skill">
+          <span id="key">python</span>
+          <span id="key">Java</span>
+          <span id="key">JavaScript</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+
+      <div class="f1-box">
+        <img src="images/waseem.png" alt="" />
+        <h3>Wasim Haider</h3>
+        <div class="skill">
+          <span id="key">JavaScript</span>
+          <span id="key">python</span>
+          <span id="key">Java</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+
+      <div class="f1-box">
+        <img src="images/abdurazaq..png" alt="" />
+        <h3>Robert Fort</h3>
+        <div class="skill">
+          <span id="key">JavaScript</span>
+          <span id="key">Java</span>
+          <span id="key">python</span>
+        </div>
+        <a href="#" id="g-btn">View Profile</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+
+  <footer class="footer">
+    <div class="obj-width">
+      <div class="top">
+        <div>
+          <img src="images/logo.png" alt="" class="logo" />
+          <p>Search your desired jobs</p>
+        </div>
+        <div>
+          <a href="#"><i class="bx bxl-facebook-square"></i></a>
+        </div>
+
+        <div>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+        </div>
+
+        <div>
+          <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+        </div>
+
+        <div>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+
+      </div>
+      <div class="bottom">
+        <div>
+          <h3>Project</h3>
+          <a href="#">Changelog</a>
+          <a href="#">Status</a>
+          <a href="#">License</a>
+          <a href="#">All Versions</a>
+        </div>
+
+        <div>
+          <h3>Community</h3>
+          <a href="#">Github</a>
+          <a href="#">Issues</a>
+          <a href="#">Project</a>
+          <a href="#">Twitter</a>
+        </div>
+
+        <div>
+          <h3>Help</h3>
+          <a href="#">Support</a>
+          <a href="#">Troubleshooting</a>
+          <a href="#">Contact Us</a>
+
+        </div>
+
+        <div>
+          <h3>Others</h3>
+          <a href="#">Terms of service</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">License</a>
+
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+  <script src="toggle.js"></script>
 </body>
 
 </html>
