--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <a href="index.html"><img src="images/logo.png" alt="" srcset="" class="logo" /></a>
 
       <ul id="menu">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="/jobs/jobs.html">Browse Jobs</a></li>
         <li><a href="contact.html">Contact</a></li>
         <button id="w-btn">Join</button>
