--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
 
       <div class="f1-box">
-        <img src="images/abdurazaq..png" alt="" />
+        <img src="images/abdurazaq..jpg" alt="" />
         <h3>Robert Fort</h3>
         <div class="skill">
           <span id="key">JavaScript</span>
