changing in main file

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <div class="f1-box">
         <img src="images/abdurazaq..jpg" alt="" />
-        <h3>Robert Fort</h3>
+        <h3>Abdur Razaq</h3>
         <div class="skill">
           <span id="key">JavaScript</span>
           <span id="key">Java</span>
