--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
         <img src="images/qaisar.png" alt="" />
         <h3>Qaisar Iqbal</h3>
         <div class="skill">
-          <span id="key">python</span>
           <span id="key">JavaScript</span>
-          <span id="key">Java/span>
+          <span id="key">Java</span>
+          <span id="key">python</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
@@ -178,8 +178,8 @@
         <h3>Hikmat Khan</h3>
         <div class="skill">
           <span id="key">python</span>
-          <span id="key">JavaScript</span>
           <span id="key">Java</span>
+          <span id="key">JavaScript</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
@@ -188,8 +188,8 @@
         <img src="images/waseem.png" alt="" />
         <h3>Wasim Haider</h3>
         <div class="skill">
-          <span id="key">python</span>
           <span id="key">JavaScript</span>
+          <span id="key">python</span>
           <span id="key">Java</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
@@ -199,9 +199,9 @@
         <img src="images/abdurazaq..jpg" alt="" />
         <h3>Abdur Razaq</h3>
         <div class="skill">
-          <span id="key">python</span>
           <span id="key">JavaScript</span>
           <span id="key">Java</span>
+          <span id="key">python</span>
         </div>
         <a href="#" id="g-btn">View Profile</a>
       </div>
