added job detail

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
 
   <!-- Team Section -->
 
+  <!-- <section class=" team sec-space obj-width">
+    <h2>highest rated freelancers</h2>
+
+  </section> -->
+
+  <!-- its for practice -->
+
   <section class="team sec-space obj-width">
     <h2>Highest Rated Freelancers</h2>
     <p>Most viewed and all-time top-selling services</p>
